--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@devindon/movie-crawler",
+  "name": "@iinfinity/movie-crawler",
   "version": "0.1.0",
   "description": "Movie crawler for y80s.com",
   "main": "dist/index.js",
@@ -24,20 +24,21 @@
   },
   "keywords": [
     "typescript",
-    "project"
+    "crawler",
+    "movie"
   ],
   "author": "IInfinity <I.INF@Outlook.com> (https://blog.don.red/)",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "jsdom": "^16.2.2",
-    "superagent": "^5.2.2"
+    "jsdom": "16.2.2",
+    "superagent": "5.2.2"
   },
   "devDependencies": {
     "@types/jasmine": "3.5.10",
-    "@types/jsdom": "^16.2.1",
+    "@types/jsdom": "16.2.1",
     "@types/node": "13.13.2",
-    "@types/superagent": "^4.1.7",
+    "@types/superagent": "4.1.7",
     "cross-env": "7.0.2",
     "jasmine": "3.5.0",
     "jasmine-console-reporter": "3.1.0",
