--- a/package.json
+++ b/package.json
@@ -32,22 +32,18 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "jsdom": "16.2.2",
-    "superagent": "5.2.2"
+    "axios": "0.19.2",
+    "jsdom": "16.2.2"
   },
   "devDependencies": {
     "@types/jasmine": "3.5.10",
     "@types/jsdom": "16.2.1",
     "@types/node": "13.13.2",
-    "@types/superagent": "4.1.7",
     "cross-env": "7.0.2",
     "jasmine": "3.5.0",
     "jasmine-console-reporter": "3.1.0",
-    "ts-loader": "7.0.1",
     "ts-node": "8.9.0",
-    "typescript": "3.8.3",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.11"
+    "typescript": "3.8.3"
   },
   "repository": {
     "type": "git",
