--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "tsc",
     "clean": "sh -c 'rm -rf dist out temp'",
     "debug": "node --inspect-brk -r ts-node/register src/main/index.ts",
+    "demo": "node -r ts-node/register src/demo/index.ts",
     "dev": "cross-env MODE=DEV node -r ts-node/register src/main/index.ts",
     "pack": "webpack --config webpack.prod.js",
     "prepublishOnly": "npm run clean && npm run build",
@@ -32,18 +33,18 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "axios": "0.19.2",
-    "jsdom": "16.2.2"
+    "axios": "0.20.0",
+    "jsdom": "16.4.0"
   },
   "devDependencies": {
-    "@types/jasmine": "3.5.10",
-    "@types/jsdom": "16.2.1",
-    "@types/node": "13.13.2",
+    "@types/jasmine": "3.5.14",
+    "@types/jsdom": "16.2.4",
+    "@types/node": "14.11.8",
     "cross-env": "7.0.2",
-    "jasmine": "3.5.0",
+    "jasmine": "3.6.1",
     "jasmine-console-reporter": "3.1.0",
-    "ts-node": "8.9.0",
-    "typescript": "3.8.3"
+    "ts-node": "9.0.0",
+    "typescript": "4.0.3"
   },
   "repository": {
     "type": "git",
